--- a/sass/layout/_body.scss
+++ b/sass/layout/_body.scss
@@ -1,10 +1,16 @@
 /* CSS Animation Test Shapes - Body styles - Table of Contents
 ------------------------------------------------------------
-1. Demo container
+1. Body
+2. Demo container
 =================================================================================================
 */
-
-/*1. Demo container
+/*1. Body
+------------------------------------------------------------------------------------------------*/
+html, 
+body {
+	@include background-image(linear-gradient(white, #5bd6ff));
+}
+/*2. Demo container
 ------------------------------------------------------------------------------------------------*/
 .demo-box {
 	padding: 3em;
