--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -23,5 +23,7 @@ html, body {
 }
 footer {
   border-top: 1px dotted $grey;
-  height: auto; 
+  height: auto;
+  background-color: $oceanBlue;
+  color: white;
 }
