--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -9,4 +9,5 @@
 header {
 	background-color: $oceanBlue;
 	color: white;
+	margin-bottom: 5em;
 }
